[package]
name            = "bgpdump"
version         = "0.0.0"
authors         = ["RJ Rybarczyk <rj@rybar.tech>", "Christian Veenman <chris_veenman@hotmail.com>"]
edition         = "2018"
readme          = "README.md"
keywords        = ["mrt", "parser", "bgp"]
categories      = ["parsing", "network-programming"]
repository      = "https://github.com/rrybarczyk/bgpdump"
homepage        = "https://github.com/rrybarczyk/bgpdump"
documentation   = "https://docs.rs/bgpdump"
description     = "A library for parsing MRT formatted data"
license         = "CC0-1.0"

[dependencies.byteorder]
version = "1.2.7"
features = ["i128"]

[dev-dependencies]
libflate = "0.1"

